# solana-program-template

./: Cargo.toml  README.md
src/: error.rs  instruction.rs  processor.rs  state.rs
